--- a/draft/index.html
+++ b/draft/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <svg width="960" height="600"></svg>
+    <main id="root"></main>
     <script src="scripts/app.js"></script>    
   </body>
 
