--- a/draft/index.html
+++ b/draft/index.html
@@ -4,23 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <style>
-
-      .links line {
-        stroke: #999;
-        stroke-opacity: 0.6;
-      }
-
-      .nodes circle {
-        stroke: #fff;
-        stroke-width: 1.5px;
-      }
-
-      text {
-        font-family: sans-serif;
-        font-size: 10px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css"></link>
     <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
 
